03-qa/evidence/run-B/tc009-retrieve/objects/VS_Patient__c/fields/VS_Consent_Given__c.field-meta.xml
<CustomField>
    <fullName>VS_Consent_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DPDP consent flag (REQ-046, design §2.3/§6.7) — true once the patient/booker has affirmatively agreed to the consent notice at registration. THIS TICKET (VS-07) DEFINES THE FIELD ONLY: enforcement that a patient cannot be used for booking without VS_Consent_Given__c = true is built in VS_PatientService.findOrCreate() (VS-10). The consent notice/copy text shown to the citizen is NOT built in this ticket (no screen exists yet); when it is built, per D-024 it must be a Custom Label prefixed &quot;[[DRAFT - pending department approval]]&quot;, never hardcoded text. Default false — consent must be an explicit opt-in, never assumed.</description>
    <label>Consent Given</label>
    <type>Checkbox</type>
</CustomField>