03-qa/evidence/run-B/tc009-retrieve/objects/VS_Patient__c/fields/VS_Consent_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>VS_Consent_Timestamp__c</fullName>
    <description>Timestamp DPDP consent was captured (REQ-046, design §2.3/§6.7), paired with VS_Consent_Given__c to make consent auditable (when, not just whether). THIS TICKET (VS-07) DEFINES THE FIELD ONLY: it is stamped by VS_PatientService.findOrCreate() (VS-10) on successful consent capture — no automation sets it in this ticket. Not required at the schema level since a patient row can exist transiently before consent is stamped by the service.</description>
    <label>Consent Timestamp</label>
    <type>DateTime</type>
</CustomField>