03-qa/evidence/run-B/tc009-retrieve/objects/VS_Patient__c/fields/VS_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>VS_Date_Of_Birth__c</fullName>
    <description>Patient date of birth — Annexure C1.1 core person attribute (design §2.3, OQ-026). One of the three inputs (with full name + mobile) normalized into VS_Match_Key__c for exact-match de-dup (D-011/D-017); also the basis for future age/next-dose-due math (deferred feature — no next-dose logic built in this ticket). Required because the match key cannot be computed without it.</description>
    <label>Date of Birth</label>
    <required>true</required>
    <type>Date</type>
</CustomField>