03-qa/evidence/run-B/tc009-retrieve/objects/VS_Patient__c/fields/VS_Email__c.field-meta.xml
<CustomField>
    <fullName>VS_Email__c</fullName>
    <description>Patient email address — Annexure C1.1 explicitly OPTIONAL person attribute (design §2.3: &quot;Email, optional&quot;). Not part of the de-dup match key (D-011 uses name+DOB+mobile only) and not required to register or book.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>