03-qa/evidence/run-B/tc009-retrieve/objects/VS_Patient__c/fields/VS_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>VS_Full_Name__c</fullName>
    <description>Patient&apos;s full name — Annexure C1.1 core person attribute. One of the three inputs (with DOB + mobile) normalized into VS_Match_Key__c for exact-match de-dup (D-011/D-017); required because the match key cannot be computed without it. The standard &quot;Patient Record&quot; Name field is a non-PII auto-number identifier, deliberately kept separate from this field to avoid duplicating PII into a field commonly surfaced in list views/global search (FLS restricts this field independently). NOT an Aadhaar or other government-ID field.</description>
    <label>Full Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>