03-qa/evidence/run-B/tc009-retrieve/objects/VS_Patient__c/fields/VS_Gender__c.field-meta.xml
<CustomField>
    <fullName>VS_Gender__c</fullName>
    <description>Patient gender — Annexure C1.1 explicitly OPTIONAL person attribute (design §2.3: &quot;picklist, optional&quot;). Not required to register or book. Exact picklist values are a dev-mid assumption (design does not enumerate them) — logged as A-012 for BA/DHO confirmation before launch; do not treat these labels as department-approved final copy.</description>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PreferNotToSay</fullName>
                <label>Prefer Not to Say</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>