03-qa/evidence/run-B/tc009-retrieve/objects/VS_Patient__c/fields/VS_Locality__c.field-meta.xml
<CustomField>
    <fullName>VS_Locality__c</fullName>
    <description>Patient&apos;s general locality/area name (e.g. village or ward) — Annexure C1.1 person attribute. Deliberately NOT a full postal address: data minimization (C1) caps address detail at locality + pincode only (REQ-045). Not required.</description>
    <label>Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>