03-qa/evidence/run-B/tc009-retrieve/objects/VS_Patient__c/fields/VS_Pincode__c.field-meta.xml
<CustomField>
    <fullName>VS_Pincode__c</fullName>
    <description>Patient&apos;s 6-digit Indian postal (PIN) code — Annexure C1.1 person attribute, the outer bound of address detail collected (no street/house-level address, REQ-045). Stored as text (not Number) to preserve leading zeros and avoid arithmetic interpretation. Not required.</description>
    <label>Pincode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>